# multi-agents

./: .env.example  .envrc  .gitignore  MODAL_DEPLOYMENT_GUIDE.md  Makefile  README.md  README_chat_app.md  chat_app_qwen.py  modal_config.py  pyproject.toml  test_chat_app.py  test_qwen_app.py
agent/agents_eval/: README.md  __init__.py  base_evaluator.py  test_agents_eval.py
agent/agents_eval/results/example_experiment/: evaluation_results_20250529_214415.json
agent/financial_research_agent/: manager.py
agent/financial_research_agent/agents/: search_agent.py
agent/fix_agents/financial/: financial_adviser.py
agent/story_agent/: main.py  manager.py
agent/story_agent_simple/: README.md  main.py  manager.py
agent/story_agent_simple/my_agents/: evaluator_agent.py  generator_agent.py
agents/: __init__.py  scenario_analysis.py
agents/agents_eval/: README.md  agent_generator.py  evaluation_framework.py  evaluator_generator.py  test_agents_eval.py
agents/fix_statement/financial/: scenario_analysis.py
agents/story_agent/: README.md  main.py  manager.py  store_agent.py
agents/story_agent/agents/: explainer_agent.py
agents/story_agent/my_agents/: coordinator_agent.py  evaluator_agent.py  generator_agent.py  manager_agent.py
config/: .envrc  modal_config.py
docs/: instructions.txt  mental_health_customer_service_manual.txt  modal_deployment.txt  psychology_fundamentals.txt
eval/: eval_agent.py  eval_agent_source.py  eval_llm_test.py  evaluator.py
online_chat/agent/: claude_test.py  openai_test.py
serve/: serve_llm.py
server/: serve.py
trainer/: train.py
web/: chat_app.py  chat_app_qwen.py  flask_web.py
