[project]
name = "online-chat"
version = "0.1.0"
description = "LLM training and serving environment"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "datasets>=2.12.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fsspec==2023.9.2",
    "huggingface-hub==0.16.4",
    "tokenizers==0.13.3",
]

[project.optional-dependencies]
train = [
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "evaluate>=0.4.0",
]
serve = [
    "sentencepiece>=0.1.99",
    "protobuf>=4.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
conflicts = [
    [
        { extra = "train" },
        { extra = "serve" },
    ]
] 